# spark-rvc-inference-module

./: .gitignore  README.md  configure_gpu_deps.py  generate-project-tree.js  infer-web.py  pyproject.toml  struct.txt
configs/: config.py
infer/lib/: audio.py  rmvpe.py  rtrvc.py
infer/lib/infer_pack/: attentions.py  attentions_onnx.py  models.py  models_onnx.py
infer/lib/uvr5_pack/lib_v5/: spec_utils.py
infer/modules/onnx/: export.py
infer/modules/uvr5/: vr.py
infer/modules/vc/: modules.py  pipeline.py
modules/merged_ui/: buffer_queue.py  main.py  model_threading.py  streaming_utils.py  utils.py  worker_manager.py  workers.py
modules/rvc_ui/: initialization.py  main.py  utils.py  utils.pyi
modules/spark_ui/: main.py
spark/cli/: inference.py
spark/runtime/triton_trtllm/: client_grpc.py  client_http.py
spark/runtime/triton_trtllm/model_repo/spark_tts/1/: model.py
spark/sparktts/models/: audio_tokenizer.py
temp_tools/: analize_deps.py  clean_i18n.py  join.py  remap_i18n.py  remove_unused_imports.py  used_dependencies.txt
tools/: app.py  download_assets.py  download_model.py  export_onnx.py  onnx_inference_demo.py
tools/infer/: train-index-v2.py  train-index.py  trans_weights.py
tools/torchgate/: __init__.py
